# rss-discord-bot

./: README.md  bot.py  pyproject.toml  token.secret
