[tool.poetry]
name = "rss-discord-bot"
version = "0.1.0"
description = ""
authors = ["nikhil <nikhil.rauniyar.nrr@gmail.com>"]
readme = "README.md"
packages = [{include = "rss_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
